= Changelog

All notable changes to this project will be documented in this file.

The format is based on https://keepachangelog.com/en/1.0.0/[Keep a Changelog],
and this project adheres to https://semver.org/spec/v2.0.0.html[Semantic Versioning].

== [Unreleased]

=== Changed

* Add changelog
* Implentation of Koson DSL

== [1.0.0] - to come

=== Added

=== Changed

=== Removed