@@ -11,6 +11,7 @@ and this project adheres to https://semver.org/spec/v2.0.0.html[Semantic Version
 
 * Add changelog
 * Implentation of Koson DSL
+* Add rawJson() to inline Json inside DSL
 
 == [1.0.0] - to come
 
